# maintree

./: .gitignore  .gitmodules  LICENSE  README.md  WORKSPACE
circuits/: common_parts.dcm  common_parts.lib
circuits/stm32f4_breakout/: stm32f4_breakout-cache.lib  stm32f4_breakout.sch
circuits/stm32g030c8t6_breakout_v1/: stm32g030c8t6_breakout_v1-cache.lib  stm32g030c8t6_breakout_v1.sch
common/: README.md  WORKSPACE  lib.rs
common/parsing/: BUILD
common/rust/: .gitignore  BUILD  Cargo.toml
common/rust/src/: image.rs  kitti.rs  lib.rs  pointcloud.rs
common/rust/src/bevy/: camera.rs  mod.rs  pointcloud.rs  pointcloud.wgsl
common/rust/src/datastructures/: mod.rs  pointcloud.rs
common/rust/src/parsing/: kitti.rs  mod.rs
common/vision/: BUILD
common/window_system/: BUILD  Cargo.toml
common/window_system/src/: lib.rs
ideas/actix-thread-unsafe-ffi/: Cargo.toml
ideas/actix-thread-unsafe-ffi/src/: dispatcher.rs  main.rs
ideas/rts/: Cargo.toml
ideas/rts/src/: main.rs
models/: README.md  airship.FCStd  common.FCStd  desk.FCStd  modular_desk_v1.FCStd  planter_box_v1.FCStd
models/drones/: scout.FCStd
models/ideas/: photolithography_machine.FCStd
models/parts/atlas_science/: ph_probe.FCStd
random/: README.md
random/cpp/ceres-solver/: BUILD  CMakeLists.txt
random/cpp/ceres-solver/include/: bal.h
random/cpp/ceres-solver/src/: ba.cpp  bal.cpp  helloworld.cpp
random/cpp/vision/: CMakeLists.txt
random/cpp/vision/src/: 8_point.cpp  featurestuff.cpp  optical_flow.cpp  tracking.cpp
random/python/cv/: .gitignore  calc_intrinsics.py  capture.py  feature_match.py  live_calibration.py  lk.py  ov2slam.py  requirements.txt
random/rust/bevy/: Cargo.toml  Untitled.ipynb
random/rust/bevy/assets/shaders/: infinite_grid.wgsl
random/rust/bevy/src/: debug.rs  debug_camera.rs  flying_camera.rs  lib.rs  x_composite.rs
random/rust/embedded/blackpill/: Cargo.toml  README.md  build_and_flash.sh  memory.x
random/rust/embedded/blackpill/.cargo/: config
random/rust/embedded/graphics/: Cargo.toml
random/rust/legion/: Cargo.toml
random/rust/memio/: Cargo.toml
random/rust/misc/: .gitignore  Cargo.toml
random/rust/rendy/: BUILD  Cargo.toml
random/rust/vision/: Cargo.toml  tracking_test_1.sh
random/rust/vision/assets/: tracking_test_1.calib.yaml
random/rust/vision/assets/office_calib_iphone/: orbit_left_right.yaml  translate_left_right.yaml
random/rust/vision/src/: bevy_plugin.rs  calibration.rs  lib.rs  mapping.rs  pattern.rs  tracking.rs
random/rust/vision/src/slam/: mod.rs  state.rs
random/rust/vulkano/: BUILD  Cargo.toml
random/rust/wgpu/: Cargo.toml
random/rust/wgpu/src/: camera.rs  main.rs  renderer.rs  shader.rs  shader.wgsl  vertex.rs
random/rust/wgpu/src/shaders/: default.wgsl  pointcloud.wgsl
random/rust/xlib/: Cargo.toml  error.rs  launch
random/rust/xlib/assets/shaders/: basic.frag  basic.vert
random/rust/xlib/src/: components.rs  compositor.rs  display.rs  lib.rs  resources.rs  stats.rs  systems.rs  window.rs
random/rust/xlib/src/extension/: gl.rs  mod.rs
random/rust/xlib/src/render/: camera.rs  mod.rs  shader.rs  texture.rs
random/rust/xlib/src/render/mesh/: buffer.rs  mod.rs  vertex_array.rs
random/rust/xlib/src/window_system/: display.rs  mod.rs  pixmap.rs  window.rs
random/rust/xlib/src/window_system/extension/: composite.rs  damage.rs  gl.rs  mod.rs
tools/rand/src/: main.rs
trash/: README.md
viz/: README.md
wip/: BUILD  README.md
wip/atlas/: CMakeLists.txt
wip/atlas/include/: atlas.h
wip/atlas/src/: atlas.cpp
wip/edge/: .gitignore  BUILD  Cargo.toml  README.md  test.sh
wip/edge/src/: buffer.rs  lib.rs  lib.rs.old  main.rs  mesh.rs  pipeline.rs  renderer.rs  shader.rs
wip/edge/src/examples/: triangle.rs
wip/kitti_viewer/: BUILD  Cargo.toml  README.md
wip/kitti_viewer/src/: main.rs
wip/minerva/: Cargo.toml
wip/mirage/: demo.sh
wip/mirage/graphics/: Cargo.toml
wip/mirage/graphics/assets/shaders/: floor.wgsl
wip/mirage/sfm/: CMakeLists.txt
wip/mirage/sfm/include/: camera.h  initializer.h  triangulation.h  util.h
wip/mirage/sfm/src/: camera.cpp  initializer.cpp  triangulation.cpp  util.cpp
