[package]
name = "malicious"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
env_logger = "0.8.3"
itertools = "0.8"
lazy_static = "1.4"
log = "0.4.0"
regex = "1.5"
zip = "0.5"
nalgebra = "0.29.0"

# https://github.com/flamegraph-rs/flamegraph stuff
[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
