[package]
name = "malicious"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bytesize = "1.1.0"
chrono = "0.4"
env_logger = "0.8.3"
image = "0.24.0"
itertools = "0.8"
lazy_static = "1.4"
log = "0.4.0"
nalgebra = "0.29.0"
regex = "1.5"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.21", features = [ "serialize" ] }
zip = "0.5"

# https://github.com/flamegraph-rs/flamegraph stuff
[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
