[package]
name = "actix-thread-unsafe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-prom = "0.6.0"
tokio = { version = "1.18.5" }
log = "0.4"
env_logger = "0.9"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
