[package]
name = "edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
env_logger = "0.6.1"
lazy_static = "1.4"
nalgebra = "0.29.0"
petgraph = "0.6.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
wgpu = "0.11.0"
winit = "0.25"
