[package]
name = "bevy-sandbox"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
smooth-bevy-cameras = "0.2.0"
env_logger = "0.9.0"
home = "0.5.3"
log = "0.4"
nalgebra = "0.29.0"
image = "0.13.0"

[dependencies.malicious]
path = "../../../common/rust/"

[dependencies.x11rb]
version = "0.8.1"
features = [ "all-extensions" ]
