[package]
name = "bevy-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
crossbeam-channel = "0.5.0"
raw-window-handle = "0.4.2"  # NOTE: this probably needs to match the version here: https://github.com/bevyengine/bevy/blob/main/crates/bevy_window/Cargo.toml

[dependencies.x11]
git = "https://github.com/malwrar/x11-rs"
branch = "backlog"
features = [ "xlib", "xcomposite", "xdamage" ]