[package]
name = "rendy-sandbox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.3"
lazy_static = "1.4.0"
rendy-core = "0.5.1"
rendy-shader = "0.5.1"

[dependencies.rendy]
version = "0.5.1"
features = ["base", "vulkan", "init-winit", "texture-image", "shader-compiler"]
