[package]
name = "vision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.0"
opencv = "0.66"
bevy = "0.8.1"
nalgebra = "0.31.1"
serde = "1.0"
serde_yaml = "0.9"
petgraph = "0.6.2"
uuid = { version = "0.4", features = [ "v4" ] }
clap = { version = "3.2.20", features = ["derive"] }
