[package]
name = "vulkano-sandbox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17"
png = "0.15.0"
ron = "0.6.0"
serde = { version="1.0.114", features = ["derive"] }
time = "0.1.38"
vulkano = "0.20"
vulkano-shaders = "0.20"
winit = "0.24"
vulkano-win = "0.20"
