[package]
name = "wgpu-sandbox"
version = "0.1.0"
edition = "2018"
resolver = "2"  # required by wgpu, see https://sotrh.github.io/learn-wgpu/beginner/tutorial1-window/#using-rust-s-new-resolver

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
zip = "0.5.13"
regex = "1.5"
lazy_static = "1.4"
malicious = { path = "../../../common/rust" }

[dependencies.wgpu]
version = "0.10"
