[package]
name = "blackpill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display-interface-spi = "0.4.1"
embedded-hal = "0.2.7"
embedded-graphics = "0.7.1"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
rtt-target = {version = "0.3", features = ["cortex-m"]}
ssd1351 = "0.4.0"
ssd1306 = "0.7.0"

[dependencies.stm32f4xx-hal]
version = "0.12.0"
features = ["rt", "stm32f411"]
