[package]
name = "graphics-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
embedded-graphics = "0.7.0"
embedded-graphics-simulator = "0.3.0"
embedded-text = "0.5.0"
tinybmp = "0.3.1"
tinytga = "0.4.1"
